0.7.0
Added openindocview to kkeditqtmsg.
More tab fixes for qttabbar.
Fixed size of tabbar scroll buttons.
Dirty document now shows red text in tab.
Fixed jumpy tabs.
Added auto repeat to tab bar scroll buttons.
Added tab bar scroll buttons.
Removed redundant "enumerator" entries from function menu.
Fixed blank item in function menu representing anonymous functions( lambdas ).
Redone find replace dialog.
Fixed replace backwards.
Fixed line wrap from view menu.
Updates to messaging.
Fixed tab key auto completing ( unwanted behaviour ).
Removed redundant help item.
Cleaned up kkeditqtmsg app ( see kkeditqtmsg -h ).
About class clean.
Now fully usable.


0.6.0
Fixed document visibility.
Fixed incorrect function menu while closing tab with hidden tabs,
Double clicking in white space now selects the white space.
Code clean.
CPP highlight plugin tweaks.
Fixed minor ui glitch with hilighting 'c' functions.
Added 'Edit Tool' to manage tools, if tool command is a file, opens it, else copies command to clipboard.
Done bracket matching.
Done docviewer find.
Changed web search to duckduckgo ( google to agrresive about cookies ).
Done search forward/backward in doc viewer.
Fixed tools run sync/async.
Speed tweaks for find definition.
Fixed auto indent.
Done find/replace.
Fixed highlight all.
Fixed backward search.
Fixed saving find/replace lists.
Redone find/replace/replace all/, also in multiple files, wrap etc, TODO backwards.
Fixed toggle bookmark.
Fixed bookmark menu width prefs.
Added clipboard plugin.
Done calling plugrun functions on all plugins at certain poiints ( save/load/switch page etc ).
Fixed current session not being changed.
Changed session file format use:sed -i '1a 50 50 800 600\n#RESERVED\n#RESERVED\n#RESERVED' ~.KKEditQT/sesssions/Session-1 to convert session file ( change 'Session-1' to suit ).
Gui fixes for jumping to book mark.
Fixed passing hex/octal/decimal number to -key.
Changed restore short option from -s to -r.