@@ -76,7 +76,7 @@ struct msgStruct
 	char mText[MAXMSGSIZE];
 };
 
-enum msgActions {ACTIVATEAPPMSG=100,OPENFILEMSG,SAVEFILEMSG,QUITAPPMSG,RESTORESESSIONMSG,GOTOLINEMSG,SEARCHDEFMSG,SELECTTABMSG,SELECTTABBYNAMEMSG,SELECTTABBYPATHMSG,BOOKMARKMSG,CLOSETABMSG,CLOSEALLTABSMSG,SETUSERMARKMSG,UNSETUSERMARKMASG,MOVETOMSG,PASTEMSG,COPYMSG,CUTMSG,INSERTTEXTMSG,INSERTNLMSG,INSERTFILEMSG,PRINTFILESMSG,RUNTOOLMSG,ACTIVATEMENUBYLABELEDMSG,OPENINDOCVIEWMSG,SELECTBETWEENMSG,SENDPOSDATAMSG,SENDSELECTEDTEXTMSG,LASTMSG};
+enum msgActions {ACTIVATEAPPMSG=100,OPENFILEMSG,SAVEFILEMSG,QUITAPPMSG,RESTORESESSIONMSG,GOTOLINEMSG,SEARCHDEFMSG,SELECTTABMSG,SELECTTABBYNAMEMSG,SELECTTABBYPATHMSG,BOOKMARKMSG,CLOSETABMSG,CLOSEALLTABSMSG,SETUSERMARKMSG,UNSETUSERMARKMASG,MOVETOMSG,PASTEMSG,COPYMSG,CUTMSG,INSERTTEXTMSG,INSERTNLMSG,INSERTFILEMSG,PRINTFILESMSG,RUNTOOLMSG,ACTIVATEMENUBYLABELEDMSG,OPENINDOCVIEWMSG,SELECTBETWEENMSG,SENDPOSDATAMSG,SENDSELECTEDTEXTMSG,SENDCURRENTURL,LASTMSG};
 
 #define MAXTEXTWIDTH 500
 
@@ -213,4 +213,5 @@ struct bookMarkStruct
 #include "KKEditClass.h"
 
 #endif
+
 
