@@ -4,10 +4,12 @@
 
 BUILDLANGPLUGS=${BUILDLANGPLUGS:-1}
 BUILDPLUGS=${BUILDPLUGS:-1}
+BUILDTOOLKITPLUGS=${BUILDTOOLKITPLUGS:-1}
 
 if [[ "$1" = "clean" ]];then
 	find KKEditQT/languageplugins -type d -iname "build" -exec rm -rf '{}' \; &>/dev/null
 	find KKEditQT/plugins -type d -iname "build" -exec rm -rf '{}' \; &>/dev/null
+	find KKEditQT/toolkitplugins -type d -iname "build" -exec rm -rf '{}' \; &>/dev/null
 	exit 0
 fi
 
@@ -59,6 +61,32 @@ if [ $BUILDPLUGS -eq 1 ];then
 		mkdir -p "${2}/plugins"
 		cp -rvp /tmp/plugins/* "${2}/plugins/"
 		rm -rf /tmp/plugins/
+		fi
+	popd
+fi
+
+if [ $BUILDTOOLKITPLUGS -eq 1 ];then
+	pushd KKEditQT/toolkitplugins
+		if [[ "$1" = "build" ]];then
+			while read
+				do
+					pushd $(dirname $REPLY)
+						mkdir -p build && cd build
+						qmake ..
+						make -j3
+					popd
+				done < <(find -maxdepth 2 -iname "*.pro")
+		else
+			while read
+				do
+					pushd $(dirname $REPLY)
+						cd build
+						make -j3 install
+					popd
+				done < <(find -maxdepth 2 -iname "*.pro")
+		mkdir -p "${2}/plugins"
+		cp -rvp /tmp/toolkitplugins/* "${2}/plugins/"
+		rm -rf /tmp/toolkitplugins/
 		fi
 	popd
 fi
